--- a/danusys-drone/src/main/resources/templates/test/createMisson.html
+++ b/danusys-drone/src/main/resources/templates/test/createMisson.html
@@ -123,6 +123,9 @@
             stompClient.subscribe('/topic/play',function (drone){
                 console.log(drone);
             })
+            stompClient.subscribe('/topic/play',function (drone){
+                console.log(drone);
+            })
 
 
         });
