--- a/danusys-platform/src/main/resources/static/css/board.css
+++ b/danusys-platform/src/main/resources/static/css/board.css
@@ -276,9 +276,10 @@
 .popup div.popup_writing fieldset form dl dd select{flex: 1;}
 .popup div.popup_writing fieldset form dl dd textarea{flex: 1; resize: none;}
 .popup div.popup_writing fieldset form dl dd .fileBox{flex: 1; width: 100%; display: flex; flex-direction: row; align-items: center; justify-content: space-between; grid-gap: 10px;}
-.popup div.popup_writing fieldset form dl dd .fileBox .uploadName{width: 78%; height: 40px; padding: 0px 10px; vertical-align: middle; border: 1px solid #292c34; color: #999999;}
+.popup div.popup_writing fieldset form dl dd .fileBox .upload_name{width: 78%; height: 40px; padding: 0px 10px; vertical-align: middle; border: 1px solid #292c34; color: #999999;}
 .popup div.popup_writing fieldset form dl dd .fileBox label{height: 40px; line-height: 38px; padding: 0px 14px; background: #2b2f3a; border-radius: 4px; cursor: pointer;}
 .popup div.popup_writing fieldset form dl dd .fileBox input[type="file"]{position: absolute; overflow: hidden; width: 0; height: 0; padding: 0; border: 0;}
+.popup div.popup_writing fieldset form dl dd .fileBox .download_btn{height: 40px; line-height: 38px; padding: 0px 14px; background: #2b2f3a; border-radius: 4px; cursor: pointer;}
 .popup div.popup_writing fieldset form dl dd span.button{height: 34px; color: #797d87;}
 .popup div.popup_writing fieldset form dl dd span.button:hover{color: #dee0e4;}
 .popup div.popup_writing fieldset form dl.checkbox{align-items: center;}
