--- a/danusys-platform/src/main/resources/templates/view/pages/config/notice.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/notice.html
@@ -45,11 +45,12 @@
                     <table id="noticeTable">
                         <colgroup>
                             <col width="20%">
-                            <col width="40%">
+                            <col width="35%">
                             <col width="10%">
                             <col width="10%">
                             <col width="10%">
                             <col width="10%">
+                            <col width="5%">
                         </colgroup>
                         <thead>
                             <tr>
@@ -59,6 +60,7 @@
                                 <th scope="col">작성일시</th>
                                 <th scope="col">첨부파일</th>
                                 <th scope="col">상세보기</th>
+                                <th scope="col">수정</th>
                             </tr>
                         </thead>
                     </table>
@@ -77,7 +79,7 @@
                         <form id="noticeForm">
                             <dl>
                                 <dt>제목</dt>
-                                <dd><input id="noticeTitle" data-required="true" name="noticeTitle" type="text" /></dd>
+                                <dd><input id="noticeTitle" data-required="true" placeholder="제목을 입력해 주세요." name="noticeTitle" type="text" /></dd>
                             </dl>
                             <dl>
                                 <dt>본문</dt>
@@ -87,19 +89,17 @@
                                 <dt>첨부 파일</dt>
                                 <dd>
                                     <div class="fileBox">
-                                        <input class="uploadName" id="noticeFile" name="noticeFile" placeholder="첨부파일" readonly/>
-                                        <label for="file">파일찾기</label>
-                                        <input type="file" id="file">
+                                        <input class="upload_name" id="noticeFile" name="noticeFile" placeholder="첨부파일" readonly/>
                                     </div>
                                 </dd>
                             </dl>
-                            <dl data-mode="mod">
+                            <dl data-mod="true" data-detail="true">
                                 <dt>작성자</dt>
                                 <dd><input type="text" id="insertUserId" readonly /></dd>
                                 <dt>작성 일시</dt>
                                 <dd><input type="text" id="insertDt" readonly /></dd>
                             </dl>
-                            <dl data-mode="mod">
+                            <dl data-mod="true" data-detail="true">
                                 <dt>수정자</dt>
                                 <dd><input type="text" id="updateUserId" readonly /></dd>
                                 <dt>수정 일시</dt>
@@ -109,9 +109,9 @@
                     </fieldset>
                 </div>
                 <ul class="bottom">
-                    <li data-mode="mod" id="delNoticeProcBtn">삭제</li>
-                    <li data-mode="mod" id="modNoticeProcBtn">정보 수정</li>
-                    <li class="color" data-mode="add" id="addNoticeProcBtn">등록</li>
+                    <li data-mod="true" id="delNoticeProcBtn">삭제</li>
+                    <li data-mod="true" id="modNoticeProcBtn">정보 수정</li>
+                    <li class="color" data-add="true" id="addNoticeProcBtn">등록</li>
                 </ul>
             </div>
         </section>
