--- a/danusys-drone/src/main/resources/templates/test/droneLog.html
+++ b/danusys-drone/src/main/resources/templates/test/droneLog.html
@@ -82,16 +82,16 @@
                 <div class="articleTitle">
                     <dl class="title">
                         <dt>조회 결과</dt>
-                        <dd><span class="count">123</span>건</dd>
+                        <dd><span class="count"></span>건</dd>
                     </dl>
-                    <p>
-                        <select>
-                            <option selected>15개씩 보기</option>
-                            <option>20개씩 보기</option>
-                            <option>25개씩 보기</option>
-                            <option>30개씩 보기</option>
-                        </select>
-                    </p>
+<!--                    <p>-->
+<!--                        <select>-->
+<!--                            <option selected>15개씩 보기</option>-->
+<!--                            <option>20개씩 보기</option>-->
+<!--                            <option>25개씩 보기</option>-->
+<!--                            <option>30개씩 보기</option>-->
+<!--                        </select>-->
+<!--                    </p>-->
                 </div>
                 <div class="searchTable">
                     <table>
