layer select & order 조작 기능 구현테스트

--- a/danusys-platform/src/main/resources/static/css/monitoring.css
+++ b/danusys-platform/src/main/resources/static/css/monitoring.css
@@ -95,6 +95,13 @@
 .search_list dl dd span.state.state2{color:#f99b22; border:2px solid #f99b22;}
 .search_list dl dd span.state.state3{color:#7a8094; border:2px solid #4e5466;}
 
+/* dropdown_checkbox */
+/*.dropdown_checkbox{min-width: 220px; margin: 0px;}*/
+/*.checkbox_title{width: 15.7rem; height: 34px; line-height: 32px; margin: 0px; padding: 0px 14px; color: #dee0e4; font-size: 14px; box-sizing: border-box; border: 1px solid #292c34; border-radius: 3px; background: url("../images/default/arrowSelectBox.svg") 194px center no-repeat #1a1b1d; background-size: 14px; cursor: pointer; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; padding-right: 2rem;}*/
+/*.checkbox_list{position: absolute; top: 53px; display: none; overflow: auto; width: max-content; min-width: 220px; min-height: 86px; max-height: 140px; z-index: 1; margin: -1px 0px 0px 0px; padding:10px 14px; box-sizing: border-box; border-bottom-left-radius: 4px; border-bottom-right-radius: 4px; border: 1px solid #292c34; background: #1a1b1d;}*/
+/*.checkbox_list li{display: flex; align-items: center; justify-content: flex-start; grid-gap: 12px; line-height: 28px; padding: 4px 0px; color: #dee0e4;}*/
+/*.checkbox_list li > span{flex: 1;}*/
+
 /* area_info */
 .area_info h6{display: flex; align-items: center; justify-content: space-between; grid-gap: 8px; height: 40px; max-height: 40px; min-height: 40px; margin: 0px; padding: 0px 14px; font-size: 16px; background: #23252b;}
 .area_info h6 i{width: 20px; height: 20px; cursor: pointer;}
@@ -216,4 +223,7 @@
 .popup_mini dl dd span.state.state2{color:#f99b22; border:2px solid #f99b22;}
 .popup_mini dl dd span.state.state3{color:#7a8094; border:2px solid #4e5466;}
 
-
+/*layer viewer*/
+#layerViewer{width: max-content; height: max-content; padding: 10px; border-radius: 5px; background: #23252b; z-index: 2; right: 51px; top: 178px; position: absolute;}
+#layerViewer ul li{padding: 5px; cursor: pointer; border-bottom: 1px solid #a9a9a96b;}
+#layerViewer ul li:hover{background: #53596c;}
