--- a/danusys-platform/src/main/resources/templates/view/pages/mntr.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/mntr.html
@@ -36,6 +36,9 @@
             </ul>
         </div>
         <div id="mousePosition"></div>
+        <div id="layerViewer">
+            <ul id="layers"></ul>
+        </div>
     </div>
 </th:block>
 
