--- a/danusys-drone/src/main/resources/templates/test/droneLog.html
+++ b/danusys-drone/src/main/resources/templates/test/droneLog.html
@@ -132,7 +132,7 @@
                         <li>5</li>
                         <li class="next"><i><img src="images/um/navNext.svg"></i></li>
                     </ul>
-                    <p class="button"><i><img src="images/um/excel.svg"></i>엑셀로 내보내기</p>
+                    <p class="button excel_download"><i><img src="images/um/excel.svg"></i>엑셀로 내보내기</p>
                 </div>
             </article>
         </section>
