드론 비행 ui 개발 진행

--- a/danusys-drone/src/main/resources/templates/layout/base_layout.html
+++ b/danusys-drone/src/main/resources/templates/layout/base_layout.html
@@ -4,14 +4,10 @@
 <head>
     <meta charset="utf-8">
     <title layout:title-pattern="$LAYOUT_TITLE - $CONTENT_TITLE">드론 관제시스템</title>
-    <!--    <meta name="description" content="Latest updates and statistic charts">-->
-    <!--    <meta name="viewport" content="width=device-width, user-scalable=no, initial-sca le=1.0, maximum-scale=3.0, minimum-scale=1.0"/>-->
-    <!--    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>-->
-    <!--    <meta property="og:type" content="website"/>-->
     <meta name="ctx" th:content="${#httpServletRequest.getContextPath()}" />
-    <meta http-equiv="Cache-Control" content="no-cache" />
+    <!--<meta http-equiv="Cache-Control" content="no-cache" />
     <meta http-equiv="Pragma" content="no-cache" />
-    <meta name="context-path" th:href="@{/}"/>
+    <meta name="context-path" th:href="@{/}"/>-->
 
     <!-- common css files -->
     <link rel="stylesheet" type="text/css" href="css/default/layout.css">
