--- a/danusys-drone/src/main/resources/static/css/default/layout.css
+++ b/danusys-drone/src/main/resources/static/css/default/layout.css
@@ -117,6 +117,7 @@ header ul.utmenu li{display: flex; align-items: center; height: 100%; padding: 0
 .route li{display: flex; align-items: center;}
 .route li::before{content: ''; position: absolute; top: 0px; left: 20px; width: 2px; height: 100%; background: #515364;}
 .route li span.circle{display: block; vertical-align: middle; width: 10px; height: 10px; margin: 0px 0px 0px 16px; background: #515364; border-radius: 10px;}
+.route li span.circle.on {background: white;z-index: 1;}
 .route li span.text{overflow: hidden; display: flex; align-items: center; justify-content: flex-start; flex: 1; margin: 0px 0px 0px 10px; padding: 14px 14px;}
 
 /* missionSummary */
@@ -341,3 +342,16 @@ header ul.utmenu li{display: flex; align-items: center; height: 100%; padding: 0
 .displayBtn.return {
     visibility: hidden;
 }
+
+/*
+.vertical.on {
+    opacity: 0;
+    transform: translateY(0%);
+    transition: .2s;
+}
+
+.vertical{
+    opacity: 0;
+    transform: translateY(100%);
+    transition: .2s;
+}*/
