사용자 CRUD 진행중, 사용자 등록시 validation 추가

--- a/danusys-platform/src/main/resources/templates/view/pages/config/userAccount.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/userAccount.html
@@ -81,7 +81,7 @@
                         <form id="userAccountForm">
                             <dl>
                                 <dt>ID</dt>
-                                <dd><input type="text" id="userId" name="userId" placeholder="*필수 입력(3~25 자리 영어 + 숫자 조합)" ><span class="button">중복 확인</span></dd>
+                                <dd><input type="text" id="userId" name="userId" placeholder="*필수 입력(5~25 자리 영어, 숫자 조합)" ></dd>
                             </dl>
                             <dl>
                                 <dt>비밀번호</dt>
