--- a/danusys-platform/src/main/resources/templates/view/pages/config/userAccount.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/userAccount.html
@@ -107,11 +107,11 @@
                                 <dt>계정 상태</dt>
                                 <dd>
                                     <span>
-                                        <input type="radio" id="account_status_use" name="status" data-value="2" checked> <!--value 임시값-->
+                                        <input type="radio" id="account_status_use" name="status" data-value="0" checked> <!--value 임시값-->
                                         <label for="account_status_use"><span class="round"></span>사용</label>
                                     </span>
                                     <span>
-                                        <input type="radio" id="account_status_none" name="status" data-value="a">
+                                        <input type="radio" id="account_status_none" name="status" data-value="1">
                                         <label for="account_status_none"><span class="round"></span>사용 안함</label>
                                     </span>
                                 </dd>
