드론 소켓 오류 수정

--- a/danusys-drone/src/main/resources/templates/test/droneFrame.html
+++ b/danusys-drone/src/main/resources/templates/test/droneFrame.html
@@ -17,7 +17,7 @@
         <h1 class="logo"><i><img src="images/um/headerMenu.svg"></i>드론관제시스템</h1>
         <ul class="gnm">
             <li><a>Home</a></li>
-            <li><a href="/file/20220216_161850_소프트웨어등록.PNG">대시보드</a></li>
+            <li><a>대시보드</a></li>
             <li class="on"><a>드론</a></li>
             <li><a>미션</a></li>
             <li><a>비행</a></li>
@@ -163,7 +163,7 @@
                 <div class="articleTitle">
                     <dl class="title">
                         <dt>조회 결과</dt>
-                        <dd><span class="count">123</span>건</dd>
+<!--                        <dd><span class="count">123</span>건</dd>-->
                     </dl>
                     <ul class="button">
                         <li class="update_drone_detail_button">수정</li>
@@ -175,7 +175,11 @@
                     <dl>
                         <dt>위치</dt>
                         <dd>
-                            <input type="text" placeholder="신림면 드론 기지 01" class="drone_location">
+<!--                            <input type="text" placeholder="신림면 드론 기지 01" class="drone_location">-->
+                            <select class="location_select">
+                                <option>1</option>
+                                <option>2</option>
+                            </select>
                         </dd>
                     </dl>
                     <dl>
@@ -271,83 +275,83 @@
                         </dd>
                     </dl>
                 </div>
-                <p class="subTitle">이벤트 정보</p>
-                <div class="eventInfo">
-                    <ul>
-                        <li>
-                            <span>누적 이벤트</span>
-                            <span class="count">000</span>
-                        </li>
-                        <li>
-                            <span>### 이벤트</span>
-                            <span class="count">000</span>
-                        </li>
-                        <li>
-                            <span>### 이벤트</span>
-                            <span class="count">000</span>
-                        </li>
-                        <li>
-                            <span>### 이벤트</span>
-                            <span class="count">000</span>
-                        </li>
-                        <li>
-                            <span>### 이벤트</span>
-                            <span class="count">000</span>
-                        </li>
-                        <li>
-                            <span>### 이벤트</span>
-                            <span class="count">000</span>
-                        </li>
-                        <li>
-                            <span>### 이벤트</span>
-                            <span class="count">000</span>
-                        </li>
-                        <li>
-                            <span>### 이벤트</span>
-                            <span class="count">000</span>
-                        </li>
-                        <li>
-                            <span>### 이벤트</span>
-                            <span class="count">000</span>
-                        </li>
-                        <li>
-                            <span>### 이벤트</span>
-                            <span class="count">000</span>
-                        </li>
-                        <li>
-                            <span>### 이벤트</span>
-                            <span class="count">000</span>
-                        </li>
-                        <li>
-                            <span>### 이벤트</span>
-                            <span class="count">000</span>
-                        </li>
-                        <li>
-                            <span>### 이벤트</span>
-                            <span class="count">000</span>
-                        </li>
-                        <li>
-                            <span>### 이벤트</span>
-                            <span class="count">000</span>
-                        </li>
-                        <li>
-                            <span>### 이벤트</span>
-                            <span class="count">000</span>
-                        </li>
-                        <li>
-                            <span>### 이벤트</span>
-                            <span class="count">000</span>
-                        </li>
-                        <li>
-                            <span>### 이벤트</span>
-                            <span class="count">000</span>
-                        </li>
-                        <li>
-                            <span>### 이벤트</span>
-                            <span class="count">000</span>
-                        </li>
-                    </ul>
-                </div>
+<!--                <p class="subTitle">이벤트 정보</p>-->
+<!--                <div class="eventInfo">-->
+<!--                    <ul>-->
+<!--                        <li>-->
+<!--                            <span>누적 이벤트</span>-->
+<!--                            <span class="count">000</span>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <span>### 이벤트</span>-->
+<!--                            <span class="count">000</span>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <span>### 이벤트</span>-->
+<!--                            <span class="count">000</span>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <span>### 이벤트</span>-->
+<!--                            <span class="count">000</span>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <span>### 이벤트</span>-->
+<!--                            <span class="count">000</span>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <span>### 이벤트</span>-->
+<!--                            <span class="count">000</span>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <span>### 이벤트</span>-->
+<!--                            <span class="count">000</span>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <span>### 이벤트</span>-->
+<!--                            <span class="count">000</span>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <span>### 이벤트</span>-->
+<!--                            <span class="count">000</span>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <span>### 이벤트</span>-->
+<!--                            <span class="count">000</span>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <span>### 이벤트</span>-->
+<!--                            <span class="count">000</span>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <span>### 이벤트</span>-->
+<!--                            <span class="count">000</span>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <span>### 이벤트</span>-->
+<!--                            <span class="count">000</span>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <span>### 이벤트</span>-->
+<!--                            <span class="count">000</span>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <span>### 이벤트</span>-->
+<!--                            <span class="count">000</span>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <span>### 이벤트</span>-->
+<!--                            <span class="count">000</span>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <span>### 이벤트</span>-->
+<!--                            <span class="count">000</span>-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            <span>### 이벤트</span>-->
+<!--                            <span class="count">000</span>-->
+<!--                        </li>-->
+<!--                    </ul>-->
+<!--                </div>-->
             </section>
         </div>
     </div>
