--- a/danusys-drone/src/main/resources/templates/test/droneLog.html
+++ b/danusys-drone/src/main/resources/templates/test/droneLog.html
@@ -72,7 +72,7 @@
                                 </select>
                             </dd>
                             <dd><input class="search_word" type="text" placeholder="검색어를 입력하세요."></dd>
-                            <dd class="button"><i><img src="images/um/refresh.svg"></i>검색조건 초기화</dd>
+                            <dd class="button search_reset"><i><img src="images/um/refresh.svg"></i>검색조건 초기화</dd>
                             <dd class="button search_button"><i><img src="images/um/search.svg"></i>검색</dd>
                         </dl>
                     </div>
