드론takeoff 높이 수정

--- a/danusys-drone/src/main/resources/templates/test/droneFrame.html
+++ b/danusys-drone/src/main/resources/templates/test/droneFrame.html
@@ -240,7 +240,7 @@
                     <dl>
                         <dt>등록일자</dt>
                         <dd>
-                            <input type="date" class="drone_insert_dt" disabled>
+                            <input type="text" class="drone_insert_dt" disabled>
                         </dd>
                         <dt>유형</dt>
                         <dd>
