사용자 CRUD JPA -> mybatis 마이그레이션(read까지)

--- a/danusys-platform/src/main/resources/templates/view/pages/config/userGroup.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/userGroup.html
@@ -19,7 +19,7 @@
             <form>
                 <div>
                     <dl class="search_text_set">
-                        <dd><input type="text" placeholder="검색어를 입력하세요." name="groupName"></dd>
+                        <dd><input type="text" placeholder="검색어를 입력하세요." name="keyword"></dd>
                         <dd class="button" id="resetFormBtn"><i><img src="/images/default/return.svg"></i>검색조건 초기화</dd>
                         <dd class="button" id="searchBtn"><i><img src="/images/default/search.svg"></i>검색</dd>
                     </dl>
