--- a/danusys-platform/src/main/resources/templates/view/pages/config/userAccount.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/userAccount.html
@@ -19,7 +19,7 @@
                 <form>
                     <div>
                         <dl class="search_text_set">
-                            <dd><input type="text" placeholder="검색어를 입력하세요."></dd>
+                            <dd><input type="text" placeholder="검색어를 입력하세요." name="keyword"></dd>
                         </Dl>
                         <dl class="checkbox_set">
                             <dt>계정 상태</dt>
@@ -81,7 +81,7 @@
                         <form id="userAccountForm">
                             <dl>
                                 <dt>ID</dt>
-                                <dd><input type="text" id="userId" name="userId" placeholder="*필수 입력(3~25 자리 영어 + 숫자 조합)" ><span class="button">중복 확인</span></dd>
+                                <dd><input type="text" id="id" name="id" placeholder="*필수 입력(3~25 자리 영어 + 숫자 조합)" ><span class="button">중복 확인</span></dd>
                             </dl>
                             <dl>
                                 <dt>비밀번호</dt>
