공통 맵 경로 변경(서버 실행 테스트)

--- a/danusys-drone/src/main/resources/templates/layout/base_layout.html
+++ b/danusys-drone/src/main/resources/templates/layout/base_layout.html
@@ -17,7 +17,7 @@
     <script src="/webjars/axios/0.21.1/dist/axios.js"></script>
     <script src="/js/default/default.js" defer></script>
     <script src="/js/common/common.js" defer></script>
-    <th:block th:insert="/view/commons/map"/>
+    <th:block th:insert="view/commons/map"/>
 </head>
 
 <body>
