유저 등록시 status 에러 수정

--- a/danusys-platform/src/main/resources/templates/view/pages/config/userAccount.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/userAccount.html
@@ -25,11 +25,11 @@
                             <dt>계정 상태</dt>
                             <dd>
                                 <span>
-                                    <input type="checkbox" id="use" name="userStatus" value="0">
+                                    <input type="checkbox" id="use" name="status" data-value="0">
                                     <label for="use"><span></span>사용</label>
                                 </span>
                                 <span>
-                                    <input type="checkbox" id="none" name="userStatus" value="1">
+                                    <input type="checkbox" id="none" name="status" data-value="1">
                                     <label for="none"><span></span>휴면</label>
                                 </span>
                             </dd>
